--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-    <head></head>
+    <head>
+        <title>The primest of waffles</title>
+    </head>
     <body><p>Hi</p></body>
 </html>
