--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>The primest of waffles</title>
+        <title>The Prime Waffle</title>
     </head>
     <body><p>Hi</p></body>
 </html>
