--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <title>The Prime Waffle</title>
+        <link rel="stylesheet" href="./index.css">
     </head>
-    <body><p>Hi</p></body>
+    <body>
+        <header></header>
+        <p>Hi</p>
+    </body>
 </html>
