--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <header></header>
+        <header>
+            <h1>The Prime Waffle</h1>
+        </header>
         <p>Hi</p>
     </body>
 </html>
