Adds the waffle icon

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>The Prime Waffle</title>
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="./Styles/index.css">
+        <link rel="icon" href="./Images/wafflelogo.svg"/>
     </head>
-    <body>
-        <header>
-            <h1>The Prime Waffle</h1>
+    <body class="dark">
+        <header class="dark">
+            <h1 class="dark">The Prime Waffle</h1>
         </header>
-        <p>Hi</p>
+        <p class="dark">Hi</p>
     </body>
 </html>
